fixed spacing

--- a/styles/_letsTalk.scss
+++ b/styles/_letsTalk.scss
@@ -6,7 +6,8 @@
   border-radius: 20px;
   background-color: $red;
   padding: $consistent-gap;
-  margin-top: $consistent-gap *2;
+  margin-top: $consistent-gap * 2;
+  height: 340px;
   h2 {
     font-size: 2.5rem;
     color: white;
@@ -27,7 +28,7 @@
       background: $purple;
       border-radius: 40px;
       height: 50px;
-      padding: 0 20px;
+      padding: 2px 20px;
       display: flex;
       align-items: center;
       margin-top: 2rem;
@@ -115,24 +116,23 @@
   cursor: pointer;
 }
 
-
 @media only screen and (max-width: 1050px) {
-
   .letsTalk {
+    height: 520px;
     .options {
       width: 30%;
       display: flex;
       margin: 0 auto;
       flex-direction: column;
-      padding: $consistent-gap*1.5 0;
+      padding: $consistent-gap * 1.5 0;
       div {
-        margin-top: 130px;
+        margin-top: 100px;
       }
-      button  {
+      button {
         text-align: center !important;
       }
       #myBtn {
-        margin-top: -200px;
+        margin-top: -130px;
       }
     }
   }
@@ -142,13 +142,12 @@
     margin-bottom: -400px;
     img {
       width: 82px;
-      padding-top: 80px;
+      padding-top: 70px;
     }
     img:first-of-type {
       margin-top: -50px;
     }
   }
-
 }
 
 @media only screen and (max-width: 750px) {
@@ -162,8 +161,7 @@
       margin-left: $consistent-gap;
       font-size: 2rem;
     }
-  }  
-  
+  }
 }
 
 @media only screen and (max-width: 580px) {
